--- a/calculator.css
+++ b/calculator.css
@@ -1,11 +1,11 @@
 body, html {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    background-color: rgb(68, 59, 59);
+    background-color: slategray;
 }
 
 header {
@@ -14,12 +14,15 @@ header {
     font-size: 48px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     justify-content: center;
-    padding: 75px;
+    padding: 45px 40px 40px 40px;
 }
 
 footer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 20px;
 }
 
 .calculator {
@@ -42,7 +45,25 @@ footer {
 
 .buttons {
     flex: 30%;
-    align-self:stretch  
+    align-self:stretch;
+    background-color: whitesmoke;
+    gap: 1px;
+    border-radius: 5px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.operatorButtons {
+    flex: 30%;
+    align-self:stretch;
+    background-color: whitesmoke;
+    color: red;
+    gap: 1px;
+    border-radius: 5px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+#disabled:disabled {
+    background: whitesmoke;
 }
 
 #screen {
@@ -55,8 +76,20 @@ footer {
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 5px;
+    padding-right: 15px;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .screen p {
     text-align: center;
+}
+
+.fi-github {
+    color: var(--font);
+    font-size: 24px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.fi-github:hover {
+    transform: rotate(360deg) scale(1);
 }
